--- a/Resources/Prototypes/Entities/Objects/Specific/chemical-containers.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/chemical-containers.yml
@@ -58,7 +58,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: carbon
+      currentLabel: углерод
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -73,7 +73,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: iodine
+      currentLabel: йод
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -88,7 +88,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: fluorine
+      currentLabel: фтор
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -103,7 +103,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: chlorine
+      currentLabel: хлор
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -118,7 +118,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: aluminium
+      currentLabel: алюминий 
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -133,7 +133,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: phosphorus
+      currentLabel: фосфор
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -148,7 +148,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: sulfur
+      currentLabel: сера
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -163,7 +163,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: silicon
+      currentLabel: кремний
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -178,7 +178,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: hydrogen
+      currentLabel: водород
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -193,7 +193,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: lithium
+      currentLabel: литий
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -208,7 +208,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: sodium
+      currentLabel: натрий
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -223,7 +223,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: potassium
+      currentLabel: калий
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -238,7 +238,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: radium
+      currentLabel: радий
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -253,7 +253,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: iron
+      currentLabel: железо
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -268,7 +268,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: copper
+      currentLabel: медь
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -283,7 +283,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: gold
+      currentLabel: золото
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -298,7 +298,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: mercury
+      currentLabel: ртуть
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -313,7 +313,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: silver
+      currentLabel: серебро
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -328,7 +328,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: ethanol
+      currentLabel: этанол
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -343,7 +343,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: sugar
+      currentLabel: сахар
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -358,7 +358,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: nitrogen
+      currentLabel: азот
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -373,7 +373,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: oxygen
+      currentLabel: кислород
     - type: SolutionContainerManager
       solutions:
         beaker:
@@ -403,7 +403,7 @@
   noSpawn: true
   components:
     - type: Label
-      currentLabel: welding fuel
+      currentLabel: сварочное топливо
     - type: SolutionContainerManager
       solutions:
         beaker:
