--- a/Resources/Prototypes/_White/JukeboxSongs/LobbySongs.yml
+++ b/Resources/Prototypes/_White/JukeboxSongs/LobbySongs.yml
@@ -6,73 +6,73 @@
 
 # Songs
 - type: jukebox # WD
-  id: SpaceOddityJukebox
+  id: SpaceOddity
   name: "Song - Space Oddity"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceOddity.ogg
 
 - type: jukebox # WD
-  id: SpaceAssholeJukebox
+  id: SpaceAsshole
   name: "Song - Space Asshole"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceAsshole.ogg
 
 - type: jukebox # WD
-  id: SpaceShuttleJukebox
+  id: SpaceShuttle
   name: "Song - Space Shuttle"
   path:
     path: /Audio/White/Music/Lobby/Songs/SpaceShuttle.ogg
 
 - type: jukebox # WD
-  id: TheSettlerJukebox
+  id: TheSettler
   name: "Song - The Settler"
   path:
     path: /Audio/White/Music/Lobby/Songs/TheSettler.ogg
 
 - type: jukebox # WD
-  id: TheWizardJukebox
+  id: TheWizard
   name: "Song - The Wizard"
   path:
     path: /Audio/White/Music/Lobby/Songs/TheWizard.ogg
 
 - type: jukebox # WD
-  id: CirclesAroundTheSunJukebox
+  id: CirclesAroundTheSun
   name: "Song - Circles Around The Sun"
   path:
     path: /Audio/White/Music/Lobby/Songs/CirclesAroundTheSun.ogg
 
 - type: jukebox # WD
-  id: RetroFilkJukebox
+  id: RetroFilk
   name: "Song - RetroFilk"
   path:
     path: /Audio/White/Music/Lobby/Songs/RetroFilk.ogg
 
 - type: jukebox # WD
-  id: AllThatICanSeeJukebox
+  id: AllThatICanSee
   name: "Song - All That I Can See"
   path:
     path: /Audio/White/Music/Lobby/Songs/AllThatICanSee.ogg
 
 - type: jukebox # WD
-  id: ARealHeroJukebox
+  id: ARealHero
   name: "[NEW] Song - A Real Hero"
   path:
     path: /Audio/White/Jukebox/Music/A_Real_Hero.ogg
 
 - type: jukebox # WD
-  id: EnjoytheSilenceJukebox
+  id: EnjoytheSilence
   name: "[NEW] Song - Enjoy the Silence"
   path:
     path: /Audio/White/Jukebox/Music/Enjoy_the_Silence.ogg
 
 - type: jukebox # WD
-  id: INVISIBLEJukebox
+  id: INVISIBLE
   name: "[NEW] Song - INVISIBLE"
   path:
     path: /Audio/White/Jukebox/Music/INVISIBLE.ogg
 
 - type: jukebox # WD
-  id: NuclearJukebox
+  id: Nuclear
   name: "[NEW] Song - Nuclear"
   path:
     path: /Audio/White/Jukebox/Music/Nuclear.ogg
@@ -80,331 +80,331 @@
 # Music
 
 - type: jukebox # WD
-  id: ThunderdomeJukebox
+  id: Thunderdome
   name: "Music - Thunderdome"
   path:
     path: /Audio/White/Music/Lobby/Music/thunderdome.ogg
 
 - type: jukebox # WD
-  id: SingulooseJukebox
+  id: Singuloose
   name: "Music - Singuloose"
   path:
     path: /Audio/White/Music/Lobby/Music/singuloose.ogg
 
 - type: jukebox # WD
-  id: LasersRipApartTheBulkheadJukebox
+  id: LasersRipApartTheBulkhead
   name: "Music - Laser rip apart the bulkhead"
   path:
     path: /Audio/White/Music/Lobby/Music/lasers_rip_apart_the_bulkhead.ogg
 
 - type: jukebox # WD
-  id: EveryLightIsBlinkingAtOnceJukebox
+  id: EveryLightIsBlinkingAtOnce
   name: "Music - Every light is blinking at once"
   path:
     path: /Audio/White/Music/Lobby/Music/every_light_is_blinking_at_once.ogg
 
 - type: jukebox # WD
-  id: AtomicAmnesiaMMXJukebox
+  id: AtomicAmnesiaMMX
   name: "Music - Atomic amnesia mmx"
   path:
     path: /Audio/White/Music/Lobby/Music/atomicamnesiammx.ogg
 
 - type: jukebox # WD
-  id: SpacSpacJukebox
+  id: SpacSpac
   name: "Music - Spac Spac"
   path:
     path: /Audio/White/Music/Lobby/Music/Spac_Stac.ogg
 
 - type: jukebox # WD
-  id: CometHaleyJukebox
+  id: CometHaley
   name: "Music - Comet Haley"
   path:
     path: /Audio/White/Music/Lobby/Music/comet_haley.ogg
 
 - type: jukebox # WD
-  id: DeliriumJukebox
+  id: Delirium
   name: "Music - Delirium"
   path:
     path: /Audio/White/Music/Lobby/Music/delirium.ogg
 
 - type: jukebox # WD
-  id: MagicFlyJukebox
+  id: MagicFly
   name: "Music - Magic Fly"
   path:
     path: /Audio/White/Music/Lobby/Music/magicfly.ogg
 
 - type: jukebox # WD
-  id: CrokketThemeJukebox
+  id: CrokketTheme
   name: "Music - Crokket theme"
   path:
     path: /Audio/White/Music/crokett_39_s_theme.ogg
 
 - type: jukebox # WD
-  id: GutsJukebox
+  id: Guts
   name: "Music - Guts"
   path:
     path: /Audio/White/Music/guts.ogg
 
 - type: jukebox # WD
-  id: VoyageNeverEndingJukebox
+  id: VoyageNeverEnding
   name: "Music - Voyage Never Ending"
   path:
     path: /Audio/Ambience/voyage_neverending.ogg
 
 - type: jukebox # HONK
-  id: CosmicTemperanceJukebox
+  id: CosmicTemperance
   name: "Music - Cosmic Temperance"
   path:
-    path: /Audio/_Honk/Jukebox/blinch_Cosmic_Temperance.ogg
+    path: /Audio/_Honk//blinch_Cosmic_Temperance.ogg
 
 - type: jukebox # WD
-  id: LibetsDelayJukebox
+  id: LibetsDelay
   name: "Music - Libets Delay"
   path:
     path: /Audio/White/Music/Lobby/Music/Libets_Delay.ogg
 
 - type: jukebox # WD
-  id: ItsJustABurningMemoryJukebox
+  id: ItsJustABurningMemory
   name: "Music - Its just a burning memory"
   path:
     path: /Audio/White/Music/Lobby/Music/Its_just_a_burning_memory.ogg
 
 - type: jukebox # HONK
-  id: AnamnesisoftheworldsSinJukebox
+  id: AnamnesisoftheworldsSin
   name: "Music - Anamnesis of the world's Sin"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Anamnesis_of_the worlds_Sin.ogg
 
 - type: jukebox # HONK
-  id: DarkMatterMoonJukebox
+  id: DarkMatterMoon
   name: "Music - Dark Matter Moon"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Dark_Matter_Moon.ogg
 
 - type: jukebox # HONK
-  id: EmptyOceanJukebox
+  id: EmptyOcean
   name: "Music - Empty Ocean"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Empty_Ocean.ogg
 
 - type: jukebox # HONK
-  id: GoldenWinPianoJukebox
+  id: GoldenWinPiano
   name: "Music - Golden Win Piano"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Golden_Win_Piano.ogg
 
 - type: jukebox # HONK
-  id: KillerXChaseJukebox
+  id: KillerXChase
   name: "Music - Killer X Chase"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Killer_X_Chase.ogg
 
 - type: jukebox # HONK
-  id: PathLootCrusadersJukebox
+  id: PathLootCrusaders
   name: "Music - PathLoot Crusaders"
   path:
     path: /Audio/_Honk/Jukebox/blinch_PathLoot_Crusaders.ogg
 
 - type: jukebox # HONK
-  id: PristintheMirrorJukebox
+  id: PristintheMirror
   name: "Music - Prist in the Mirror"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Prist_in_the_Mirror.ogg
 
 - type: jukebox # HONK
-  id: StarJudgmentJukebox
+  id: StarJudgment
   name: "Music - Star Judgment"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Star_Judgment.ogg
 
 - type: jukebox # HONK
-  id: WheelofFaithJukebox
+  id: WheelofFaith
   name: "Music - Wheel of Faith"
   path:
     path: /Audio/_Honk/Jukebox/blinch_Wheel_of_Faith.ogg
 
 - type: jukebox # HONK
-  id: TheUnknownJukebox
+  id: TheUnknown
   name: "Music - The Unknown"
   path:
     path: /Audio/_Honk/Jukebox/The_Unknown.ogg
 
 - type: jukebox # HONK
-  id: EscapeintheNightJukebox
+  id: EscapeintheNight
   name: "Music - Escape in the Night"
   path:
     path: /Audio/_Honk/Jukebox/Escape_in_the_Night.ogg
 
 - type: jukebox # HONK
-  id: BossThemeJukebox
+  id: BossTheme
   name: "Music - Boss Theme"
   path:
     path: /Audio/_Honk/Jukebox/Boss_Theme.ogg
 
 - type: jukebox # HONK
-  id: BattleThemeIIJukebox
+  id: BattleThemeII
   name: "Music - Battle Theme II"
   path:
     path: /Audio/_Honk/Jukebox/Battle_Theme_II.ogg
 
 - type: jukebox # HONK
-  id: GameOverJukebox
+  id: GameOver
   name: "Music - Game_Over..."
   path:
     path: /Audio/_Honk/Jukebox/Game_Over.ogg
 
 - type: jukebox # HONK
-  id: TryAgainJukebox
+  id: TryAgain
   name: "Music - Try Again?"
   path:
     path: /Audio/_Honk/Jukebox/Try_Again.ogg
 
 - type: jukebox # HONK
-  id: BeastsandBetrayalJukebox
+  id: BeastsandBetrayal
   name: "Music - Beasts_and_Betrayal"
   path:
     path: /Audio/_Honk/Jukebox/Beasts_and_Betrayal.ogg
 
 - type: jukebox # HONK
-  id: BattleThemeIJukebox
+  id: BattleThemeI
   name: "Music - Battle Theme I"
   path:
     path: /Audio/_Honk/Jukebox/Battle_Theme_I.ogg
 
 - type: jukebox # HONK
-  id: HEAVENSAYSMANDELAJukebox
+  id: HEAVENSAYSMANDELA
   name: "Music - HEAVEN SAYS MANDELA"
   path:
     path: /Audio/_Honk/Jukebox/HEAVEN_SAYS_MANDELA.ogg
 
 - type: jukebox # HONK
-  id: CYBERSWORLDJukebox
+  id: CYBERSWORLD
   name: "Music - CYBERS WORLD?"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_A_CYBERS_WORLD.ogg
 
 - type: jukebox # HONK
-  id: BIGSHOTJukebox
+  id: BIGSHOT
   name: "Music - BIG SHOT"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_BIG_SHOT.ogg
 
 - type: jukebox # HONK
-  id: NOWSYOURCHANCETOBEAJukebox
+  id: NOWSYOURCHANCETOBEA
   name: "Music - NOWS YOUR CHANCE TO BE A"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_NOWS_YOUR_CHANCE_TO_BE_A.ogg
 
 - type: jukebox # HONK
-  id: Pandora Palace
+  id: PandoraPalace
   name: "Music - Pandora Palace"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_Pandora_Palace.ogg
 
 - type: jukebox # HONK
-  id: AttackoftheKillerQueenJukebox
+  id: AttackoftheKillerQueen
   name: "Music - Attack of the Killer Queen"
   path:
     path: /Audio/_Honk/Jukebox/Toby_Fox_feat_Lena_Raine_Marcy_Nabors_Attack_of_the_Killer_Queen.ogg
 
 - type: jukebox # WD
-  id: AGazeThatInvitedDisasterJukebox
+  id: AGazeThatInvitedDisaster
   name: "[NEW] Music - A Gaze That Invited Disaster"
   path:
     path: /Audio/White/Jukebox/Music/A_Gaze_That_Invited_Disaster.ogg
 
 - type: jukebox # WD
-  id: ANeonGlowLightstheWayJukebox
+  id: ANeonGlowLightstheWay
   name: "[NEW] Music - A Neon Glow Lights the Way"
   path:
     path: /Audio/White/Juskebox/Music/A_Neon_Glow_Lights_the_Way.ogg
 
 - type: jukebox # WD
-  id: AnotherMediumJukebox
+  id: AnotherMedium
   name: "[NEW] Music - Another Medium"
   path:
     path: /Audio/White/Jukebox/Music/Another_Medium.ogg
 
 - type: jukebox # WD
-  id: COREJukebox
+  id: CORE
   name: "[NEW] Music - CORE"
   path:
     path: /Audio/White/Jukebox/Music/CORE.ogg
 
 - type: jukebox # WD
-  id: CrystalsJukebox
+  id: Crystals
   name: "[NEW] Music - Crystals"
   path:
     path: /Audio/White/Jukebox/Music/Crystals.ogg
 
 - type: jukebox # WD
-  id: DriveMeWildJukebox
+  id: DriveMeWild
   name: "[NEW] Music - Drive Me Wild"
   path:
     path: /Audio/White/Jukebox/Music/Drive_Me_Wild.ogg
 
 - type: jukebox # WD
-  id: DustJukebox
+  id: Dust
   name: "[NEW] Music - Dust"
   path:
     path: /Audio/White/Jukebox/Music/Dust.ogg
 
 - type: jukebox # WD
-  id: EveryDayIsNightJukebox
+  id: EveryDayIsNight
   name: "[NEW] Music - Every Day Is Night"
   path:
     path: /Audio/White/Jukebox/Music/Every_Day_Is_Night.ogg
 
 - type: jukebox # WD
-  id: FieldofHopesandDreamsJukebox
+  id: FieldofHopesandDreams
   name: "[NEW] Music - Field of Hopes and Dreams"
   path:
     path: /Audio/White/Jukebox/Music/Field_of_Hopes_and_Dreams.ogg
 
 - type: jukebox # WD
-  id: HydrogenJukebox
+  id: Hydrogen
   name: "[NEW] Music - Hydrogen"
   path:
     path: /Audio/White/Jukebox/Music/Hydrogen.ogg
 
 - type: jukebox # WD
-  id: KnockKnockJukebox
+  id: KnockKnock
   name: "[NEW] Music - Knock Knock"
   path:
     path: /Audio/White/Jukebox/Music/Knock_Knock.ogg
 
 - type: jukebox # WD
-  id: NighttimeManeuversJukebox
+  id: NighttimeManeuvers
   name: "[NEW] Music - Nighttime Maneuvers"
   path:
     path: /Audio/White/Jukebox/Music/Nighttime_Maneuvers.ogg
 
 - type: jukebox # WD
-  id: SafeHavenJukebox
+  id: SafeHaven
   name: "[NEW] Music - Safe Haven"
   path:
     path: /Audio/White/Jukebox/Music/Safe_Haven.ogg
 
 - type: jukebox # WD
-  id: SilentFlowerJukebox
+  id: SilentFlower
   name: "[NEW] Music - Silent Flower"
   path:
     path: /Audio/White/Jukebox/Music/Silent_Flower.ogg
 
 - type: jukebox # WD
-  id: VoyagerJukebox
+  id: Voyager
   name: "[NEW] Music - Voyager"
   path:
     path: /Audio/White/Jukebox/Music/Voyager.ogg
 
 - type: jukebox # WD
-  id: WelcometoVA-11Hall-AJukebox
+  id: WelcometoVA-11Hall-A
   name: "[NEW] Music - Welcome to VA-11 Hall-A"
   path:
     path: /Audio/White/Jukebox/Music/Welcome_to_VA-11_Hall-A.ogg
 
 - type: jukebox # WD
-  id: You'veGotMeJukebox
+  id: You'veGotMe
   name: "[NEW] Music - You've Got Me"
   path:
     path: /Audio/White/Jukebox/Music/You've_Got_Me.ogg
